src/objects/Dept__c.object
<CustomObject>
    <fields>
        <fullName>Count_of_employees__c</fullName>
        <label>Count of employees</label>
        <summaryForeignKey>Employee__c.Dept_no__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dept_name__c</fullName>
        <label>Dept name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Salary__c</fullName>
        <label>Max Salary</label>
        <summarizedField>Employee__c.Salary__c</summarizedField>
        <summaryForeignKey>Employee__c.Dept_no__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Min_Salary__c</fullName>
        <label>Min Salary</label>
        <summarizedField>Employee__c.Salary__c</summarizedField>
        <summaryForeignKey>Employee__c.Dept_no__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_salary__c</fullName>
        <label>Total_salary</label>
        <summarizedField>Employee__c.Salary__c</summarizedField>
        <summaryForeignKey>Employee__c.Dept_no__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dept Nbr</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>